# no-redundant-call

./: CMakeLists.txt  LICENSE  README.md
include/: No_redundant_call.hpp
sample/: sample.cpp
test/: test.cpp
